--- a/AADS/Properties/Resources.resx
+++ b/AADS/Properties/Resources.resx
@@ -154,4 +154,7 @@
   <data name="45cf3151e954736717470cc74e34b7a0-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\45cf3151e954736717470cc74e34b7a0-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="vitalAssetPolitical" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\location (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
