--- a/AADS/Properties/Resources.resx
+++ b/AADS/Properties/Resources.resx
@@ -157,4 +157,13 @@
   <data name="vitalAssetPolitical" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\location (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="vitEconomic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\vitEconomic.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="vitMilitary" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\vitMilitary.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="vitPsychological" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\vitPsychological.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
