--- a/AADS/Properties/Resources.resx
+++ b/AADS/Properties/Resources.resx
@@ -154,9 +154,6 @@
   <data name="45cf3151e954736717470cc74e34b7a0-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\45cf3151e954736717470cc74e34b7a0-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="vitalAssetPolitical" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\location (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="vitEconomic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\vitEconomic.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -165,5 +162,8 @@
   </data>
   <data name="vitPsychological" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\vitPsychological.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="vitPolitical" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\location (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
